# Manga_Fi

./: CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  bug_report.md
.github/models/: art_model.py
api/: request_handler.py  response_builder.py  twitter_api.py  utils.py
scripts/: clear_cache.py  generate_sample.py  start_bot.py  update_dependencies.py
